--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lamadevnext14dashboard",
+  "name": "aadesh",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "bcrypt": "5.1.1",
     "mongoose": "8.0.0",
     "next": "14.0.1",
-    "next-auth": "5.0.0-beta.3",
+    "next-auth": "^5.0.0-beta.22",
     "react": "18",
     "react-dom": "18",
     "react-icons": "4.11.0",
